homer/k8s/resources/deployment-pvc-nfs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homer-deployment
  namespace: homer
  labels:
    app: homer
spec:
  replicas: 2
  selector:
    matchLabels:
      app: homer
  template:
    metadata:
      labels:
        app: homer
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        fsGroup: 1000
      containers:
        - name: homer
          image: b4bz/homer
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: "256Mi"
              cpu: "200m"
            requests:
              memory: "128Mi"
              cpu: "100m"
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: homer-data
              mountPath: /www/assets #容器内目录
          securityContext:
            privileged: false
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsUser: 1000
            runAsGroup: 1000
      volumes:
        - name: homer-data
          persistentVolumeClaim:
            claimName: homer-pvc
