homer/k8s/resources/httpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homer-http-route
  namespace: homer
spec:
  parentRefs:
    - name: shared-gateway
      namespace: nginx-gateway # 引用共享网关
  hostnames:
    - "domain"
    - "www.domain"
    - "dash.domain"
    - "dashboard.domain"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: homer-svc
          port: 8090
